# Logistic-Regression-from-Scratch

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_NOTES.md  Dockerfile  Muhammad_Moiz_HW3.ipynb  PERFORMANCE_NOTES.md  PROJECT_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: 2d_classification_data_v1_entropy.csv  heart.csv
examples/: demo.py
scripts/: generate_demo_images.py  generate_demo_images_simple.py
src/logistic_regression_from_scratch/: __init__.py  core.py  sklearn_integration.py  utils.py
tests/: test_core.py
